# simple-chat

./: Cargo.toml  README.md  client.sh  pre-commit-config.yaml  server.sh
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml  utils.rs
server/: Cargo.toml
server/src/: main.rs
