[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
env_logger = "0.11.5"
futures-util = "0.3.31"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
common = { path = "../common" }


[dev-dependencies]
tokio-util = "0.7.8"